hello-world/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-http-route
  namespace: hello-world
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: hello-world
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: example-service-gateway
