hello-world/hello-world-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service-cluster1
  labels:
    app.kubernetes.io/name: example-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: example-service
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
