hello-world/http-route-example.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-service
  namespace: hello-world
spec:
  parentRefs:
  - name: example-service-gateway
    namespace: example-service-gateway
  hostnames: ["example-service-external.mac.org.il","hello-world.apps.ocplandev.mac.org.il"]
  rules:
  - matches:
    - path:
      type: PathPrefix
      value: /
    backendRefs:
    - name: example-service-external
      #      kind: Service
      port: 80
      #      namespace: hello-world
