hello-world/service-entry-example.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: example-service-clusterset
  namespace: hello-world
spec:
  hosts:
  - example-service-cluster1.hello-world.svc.clusterset.local
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
